--- a/app/views/partials/_urls.erb
+++ b/app/views/partials/_urls.erb
@@ -1,7 +1,7 @@
 <table class='table table-hover'>
   <thead>
     <tr>
-      <th>URLs</th>
+      <th>URL Stats</th>
       <th></th>
     </tr>
   </thead>
@@ -10,6 +10,22 @@
       <tr>
         <td><%= k %></td>
         <td class="text-right"><%= v %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<table class='table table-hover'>
+  <thead>
+    <tr>
+      <th>URLs</th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @client.urls.all.each do |path| %>
+      <tr>
+        <td><a href=("localhost:9393/sources/<%= @client.identifier %>")<%= path %></a></td>
       </tr>
     <% end %>
   </tbody>
