added error tests that need implementation

--- a/app/views/new_client.erb
+++ b/app/views/new_client.erb
@@ -1,3 +1,5 @@
 <div class="jumbotron text-center">
   <h1><%= @client.identifier.capitalize %></h1>
 </div>
+
+  <h3><%= "No payload data has been received for #{@client.identifier.capitalize}" %></h3>
