--- a/app/views/partials/_urls.erb
+++ b/app/views/partials/_urls.erb
@@ -8,7 +8,7 @@
   <tbody>
     <% @client.urls.ordered_by_requested.each do |k, v| %>
       <tr>
-        <td><%= k %></td>
+        <td><a href="<%= @client.identifier %>/urls<%= URI(k).path %>"><%= k %></a></td>
         <td class="text-right"><%= v %></td>
       </tr>
     <% end %>
