--- a/app/views/partials/_url_stats.erb
+++ b/app/views/partials/_url_stats.erb
@@ -1,1 +1,4 @@
 <%= erb :'partials/_url_response_times' %>
+<%= erb :'partials/_url_verbs' %>
+<%= erb :'partials/_url_referrals' %>
+<%= erb :'partials/_url_user_agents' %>
