edited partials and fixed some tests

--- a/app/views/new_client.erb
+++ b/app/views/new_client.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron text-center">
-  <h1><%= @client.identifier.capitalize %></h1>
+  <h1><%= @client.client_name %></h1>
 </div>
 
-  <h3><%= "No payload data has been received for #{@client.identifier.capitalize}" %></h3>
+  <h3><%= "No payload data has been received for #{@client.client_name}" %></h3>
