--- a/app/views/partials/_response_times.erb
+++ b/app/views/partials/_response_times.erb
@@ -8,15 +8,15 @@
   <tbody>
       <tr>
         <td>Average response time</td>
-        <td class="text-right"><%= @client.payload_requests.avg_response_time %></td>
+        <td class="text-right"><%= @client.avg_response_time %></td>
       </tr>
       <tr>
         <td>Max response time</td>
-        <td class="text-right"><%= @client.payload_requests.max_response_time %></td>
+        <td class="text-right"><%= @client.max_response_time %></td>
       </tr>
       <tr>
         <td>Min response time</td>
-        <td class="text-right"><%= @client.payload_requests.min_response_time %></td>
+        <td class="text-right"><%= @client.min_response_time %></td>
       </tr>
   </tbody>
 </table>
