--- a/app/views/statistics.erb
+++ b/app/views/statistics.erb
@@ -1,4 +1,4 @@
 <div class="jumbotron text-center">
-  <h1><%= @client.identifier.capitalize %></h1>
+  <h1><%= @client.client_name %></h1>
 </div>
 <%= erb :'partials/_payload_stats' %>
