added features test, changed some formatting, edited block variables

--- a/app/views/no_event.erb
+++ b/app/views/no_event.erb
@@ -3,4 +3,4 @@
 </div>
 
   <h3>No event data has been received for <%= "#{params[:event]}" %></h3>
-  <h3><a href="<%= "/sources/#{params[:client]}" %>">Here'se some other event data</a></h3>
+  <h3><a href="<%= "/sources/#{params[:client]}" %>">Here's some other event data</a></h3>
