--- a/app/views/partials/_url_verbs.erb
+++ b/app/views/partials/_url_verbs.erb
@@ -1,7 +1,7 @@
 <table class='table table-hover'>
   <thead>
     <tr>
-      <th>Verbs Ordered by Frequency</th>
+      <th>Associated Verbs</th>
       <th></th>
     </tr>
   </thead>
