--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -1,3 +1,4 @@
+<h1>New Client Signup</h1>
 <form action="/sources" method="post">
   <input name='identifier' class="form-control" type="text" placeholder="company">
   <input name='rootUrl' class="form-control" type="text" placeholder="website">
