Add index view with css

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -6,13 +6,10 @@
   <!--CSS-->
   <link rel="stylesheet" href="/normalize.css">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
   <link rel="stylesheet" href="/application.css">
 </head>
 <body>
-
-  <div class="container">
-
     <%= yield %>
-  </div>
 </body>
 </html>
