getting some stuff to work such as the signup and index

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -4,14 +4,14 @@
         <a class="navbar-brand" href="/">RushHour</a>
       </div>
       <div id="login" class="navbar-header pull-right">
-        <a class="navbar-brand" href="/">login</a>
+        <a class="navbar-brand" href="/login">login</a>
       </div>
     </div>
   </nav>
 <div id="index-header" class="jumbotron">
   <div id="index-header-div" class="container-fluid">
     <h1>Turning insights into actions.</h1>
-    <button id="join-us" class="btn btn-lg">Join Us</button>
+    <a href="/sources/signup"><button id="join-us" class="btn btn-lg">Join Us</button></a>
   </div>
 </div>
 
