--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -8,15 +8,14 @@
 
 <div id="index-header" class="jumbotron">
 <div id="index-header-div" class="container-fluid">
-  <h1>Join Us</h1>
-  <form action="/sources" method="POST">
+  <form action="/login" method="POST">
     <div class="form-group">
       <label for="companyName">Company</label>
-      <input type="text" class="form-control" name="identifier" placeholder="company">
+      <input type="text" class="form-control" name="name" placeholder="Company">
     </div>
     <div class="form-group">
-      <label for="InputPassword">Website</label>
-      <input type="text" class="form-control" name="rootUrl" placeholder="www.website.com">
+      <label for="InputPassword">Password</label>
+      <input type="password" class="form-control" name="password" placeholder="Password">
     </div>
     <button id="join-us" class="btn btn-lg" type="submit">Login</button>
   </form>
