add navbars and fix css

--- a/app/public/application.css
+++ b/app/public/application.css
@@ -2,6 +2,10 @@ body {
   padding-top: 70px;
   background-color: #2B2B2B; }
 
+.user {
+  background-color: #fff;
+}
+
 .navbar {
   margin-bottom: 0px;
   padding-bottom: 0px;
@@ -20,7 +24,7 @@ body {
 
 #login {
   font-size: 50%;
-  font-weight: lighter;;
+  font-weight: lighter;hub ;
 }
 
 #index-header {
