--- a/app/views/event_statistics.erb
+++ b/app/views/event_statistics.erb
@@ -1,4 +1,7 @@
+<body class="user">
+<%= erb :'partials/_nav_bar' %>
 <div class="jumbotron text-center">
   <h1><%= @event.name %></h1>
 </div>
 <%= erb :'partials/_event_stats' %>
+</body>
