--- a/app/views/url_statistics.erb
+++ b/app/views/url_statistics.erb
@@ -1,4 +1,7 @@
+<body class="user">
+<%= erb :'partials/_nav_bar' %>
 <div class="jumbotron text-center">
   <h1><%= @url.host %><%= @url.relative_path %></h1>
 </div>
 <%= erb :'partials/_url_stats' %>
+</body>
