--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,3 +1,4 @@
+<body>
   <nav id="index" class="navbar navbar-default navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
@@ -27,3 +28,4 @@
 </div>
 <footer>
 </footer>
+</body>
