--- a/app/views/new_client.erb
+++ b/app/views/new_client.erb
@@ -1,5 +1,8 @@
+<body>
+<%= erb :'partials/_nav_bar' %>
 <div class="jumbotron text-center">
   <h1><%= @client.client_name %></h1>
 </div>
 
   <h3><%= "No payload data has been received for #{@client.client_name}" %></h3>
+</body>
