--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -1,10 +1,5 @@
-<nav id="index" class="navbar navbar-default navbar-fixed-top">
-  <div class="container">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="/">RushHour</a>
-    </div>
-  </div>
-</nav>
+<body>
+<%= erb :'partials/_nav_bar' %>
 
 <div id="index-header" class="jumbotron">
 <div id="index-header-div" class="container-fluid">
@@ -25,3 +20,4 @@
 
 <footer>
 </footer>
+</body>
