--- a/app/public/application.css
+++ b/app/public/application.css
@@ -22,6 +22,11 @@ body {
   font-weight: bold;
 }
 
+.sub-header {
+  font-size: 100%;
+  font-weight: bold;
+}
+
 #login {
   font-size: 50%;
   font-weight: lighter;hub ;
@@ -60,6 +65,13 @@ body {
 .glyphicon {
   height: 25px;
   width: 25px;
+}
+
+.data {
+  color: #fff;
+  background-color: #3498db;
+  margin-top: -20px;
+  padding-bottom: 50px;
 }
 
 footer {
