--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -3,9 +3,7 @@
     <div class="container">
       <div class="navbar-header">
         <a class="navbar-brand" href="/">RushHour</a>
-      </div>
-      <div id="login" class="navbar-header pull-right">
-        <a class="navbar-brand" href="/login">login</a>
+        <a class="sub-header navbar-brand pull-right" href="/login">login</a>
       </div>
     </div>
   </nav>
