--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -13,7 +13,7 @@
       <label for="InputPassword">Website</label>
       <input type="text" class="form-control" name="rootUrl" placeholder="www.website.com">
     </div>
-    <button id="join-us" class="btn btn-lg" type="submit">Login</button>
+    <button id="join-us" class="btn btn-lg" type="submit">Join</button>
   </form>
 </div>
 </div>
