--- a/app/views/url_statistics.erb
+++ b/app/views/url_statistics.erb
@@ -1,6 +1,6 @@
 <body class="user">
-<%= erb :'partials/_nav_bar' %>
-<div class="jumbotron text-center">
+<%= erb :'partials/_data_nav_bar' %>
+<div class="data jumbotron text-center">
   <h1><%= @url.host %><%= @url.relative_path %></h1>
 </div>
 <%= erb :'partials/_url_stats' %>
