--- a/app/views/partials/_request_types.erb
+++ b/app/views/partials/_request_types.erb
@@ -1,4 +1,4 @@
-
+<div class='container'>
 <table class='table table-hover'>
   <thead>
     <tr>
@@ -19,3 +19,4 @@
     <% end %>
   </tbody>
 </table>
+</div>
