--- a/app/views/partials/_response_times.erb
+++ b/app/views/partials/_response_times.erb
@@ -1,3 +1,4 @@
+<div class='container'>
 <table class='table table-hover'>
   <thead>
     <tr>
@@ -20,3 +21,4 @@
       </tr>
   </tbody>
 </table>
+</div>
