--- a/app/views/partials/_url_referrals.erb
+++ b/app/views/partials/_url_referrals.erb
@@ -1,3 +1,4 @@
+<div class='container'>
 <table class='table table-hover'>
   <thead>
     <tr>
@@ -14,3 +15,4 @@
     <% end %>
   </tbody>
 </table>
+</div>
