--- a/app/views/partials/_url_response_times.erb
+++ b/app/views/partials/_url_response_times.erb
@@ -1,3 +1,4 @@
+<div class='container'>
 <table class='table table-hover'>
   <thead>
     <tr>
@@ -36,3 +37,4 @@
     <% end %>
   </tbody>
 </table>
+</div>
