--- a/app/views/partials/_url_verbs.erb
+++ b/app/views/partials/_url_verbs.erb
@@ -1,3 +1,4 @@
+<div class='container'>
 <table class='table table-hover'>
   <thead>
     <tr>
@@ -15,3 +16,4 @@
     <% end %>
   </tbody>
 </table>
+</div>
