Add final tests

--- a/app/views/thanks.erb
+++ b/app/views/thanks.erb
@@ -9,7 +9,7 @@
   </nav>
 <div id="index-header" class="jumbotron">
   <div id="index-header-div" class="container-fluid">
-    <h2>Thanks for joining us <%= params[:identifier] %>!
+    <h2 id="thanks">Thanks for joining us <%= params[:identifier] %>!
   </div>
 </div>
 
