--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -3,8 +3,8 @@
   <meta charset="UTF-8">
   <title>RushHour</title>
   <link rel="stylesheet" href="/normalize.css">
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+  <link rel="stylesheet" href="/bootstrap.min.css">
   <link rel="stylesheet" href="/application.css">
 </head>
     <%= yield %>
