--- a/app/views/thanks.erb
+++ b/app/views/thanks.erb
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="navbar-header">
         <a class="navbar-brand" href="/">RushHour</a>
-        <a class="sub-header navbar-brand pull-right" href="/login">login</a>
+        <a class="pull-right sub-header navbar-brand" href="/login">login</a>
       </div>
     </div>
   </nav>
